Fix url to make it work

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactjs",
-  "homepage": "https://eugeneglova.github.io/react-fresh-recipes",
+  "homepage": "https://eugeneglova.github.io/react-fresh-recipes/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
